<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HeightConvert</string>
    <string name="title">Height Converter</string>
    <string name="action_settings">Settings</string>
    <string name="instructions">Enter a height in feet and inches to convert it to metric.</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="metres">Check for height in metres</string>
    <string name="result_title">Result</string>
</resources>
