<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ConvertActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_font_size"/>

    <TextView
        android:id="@+id/instructions"
        android:text="@string/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/text_top_margin"/>

    <EditText
        android:id="@+id/feet"
        android:layout_marginTop="@dimen/text_top_margin"
        android:layout_below="@id/instructions"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/text_input_height"
        android:hint="@string/feet"
        android:gravity="center"/>

    <EditText
        android:id="@+id/inches"
        android:layout_marginTop="@dimen/text_top_margin"
        android:layout_below="@id/feet"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/text_input_height"
        android:hint="@string/inches"
        android:gravity="center"/>

    <CheckBox
        android:id="@+id/meters_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inches"/>

    <TextView
        android:id="@+id/checkbox_description"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/text_height"
        android:text="@string/metres"
        android:layout_toRightOf="@id/meters_checkbox"
        android:layout_below="@id/inches"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/result_title"
        android:text="@string/result_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/text_height"
        android:gravity="center"
        android:layout_below="@id/meters_checkbox"
        android:textSize="@dimen/title_font_size"
        android:layout_marginTop="@dimen/text_top_margin"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/result_title"
        android:textSize="@dimen/result_text_size"
        android:gravity="center"/>
</RelativeLayout>
